2003-05-05  Christian Rose  <menthos@menthos.com>

	* configure.in: Added sr and sr@Latn to ALL_LINGUAS.

2003-05-04  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" in ALL_LINGUAS

2003-05-03  Kjartan Maraas  <kmaraas@gnome.org>

	* help-converters/man/gnome-man2html.c: Fix for
	manual pages that have non numerical filetypes like
	open.3pm. Fixes bug #101440. Patch from Roderich Schupp.

2003-05-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-i18n.c: Pull up fix for
	bug #106180 from HEAD.

2003-05-01  Kjartan Maraas  <kmaraas@gnome.org>

	* help-converters/info/main.c: (file_exists):
	* help-converters/man/gnome-man2html.c: (main):
	Two patches from John Fleck to fix crashes when
	feeding directories to the help converters. Fixes
	bug #104056.

2003-04-29  Kjartan Maraas <kmaraas@gnome.org>

	*  help-converters/man/gnome-man2html2.c:
	*  help-converters/man/Makefile.am: Pull up fixes from
	HEAD.

2003-04-11  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	*  libgnome/gnome-url.c (gnome_url_show_with_env):
	Make sure url substitution takes place for customized web
	browser command. Fixes bug#108909.

	Reviewed by: Mark McLoughlin <mark@skynet.ie>

2003-03-21  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS

2003-03-16  Andras Timar  <timar@gnome.hu>

	* help-converters/docbook/gnome-customization/l10n.xml:
        Added Hungarian translation.

2003-02-13  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Require intltool version that supports
	merging translations of .schemas files
	* doc/reference/Makefile.am: Removed extra '\'
	* libgnome/gnome-help.c (gnome_help_display_desktop_with_env):
	Plug a leak.
	
2003-02-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* help-converters/gnome-vfs-module/Makefile.am:
	Fix tinderbox bustage introduced by my previous commit.

2003-02-10  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* help-converters/gnome-vfs-module/Makefile.am: